# lab01

./: README.md  dfa_converted.yaml  flake.nix  input.yaml  input2.yaml  lab01.cabal  nfa_converted.yaml
app/: AutomatonTypes.hs  Main.hs  Operations.hs  ParseYAML.hs  RegularExpressions.hs
app/converter/: Main.hs  ParseYAML.hs
app/regex/: Main.hs  RegexParser.hs  RegexTypes.hs  RegularExpressions.hs
src/: Acceptance.hs  Conversion.hs  Display.hs  Operations.hs
