cabal-version:      2.4

name:               lab01
version:            0.1.0.0
author:             Rafael Costa
maintainer:         costarafael159@gmail.com
license:            NONE
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  AutomatonTypes
                      Operations
    hs-source-dirs:   src
    build-depends:    base >=4.18.3.0 && <4.19,
                      containers ^>=0.6.7
    default-language: Haskell2010

executable converter
    import:           warnings
    main-is:          Main.hs
    other-modules:    ParseYAML
    hs-source-dirs:   app/converter
    build-depends:    lab01,
                      base >=4.18.3.0 && <4.19,
                      yaml ^>=0.11.11.2,
                      aeson ^>=2.2.3.0,
                      text,
                      vector ^>=0.13.2.0,
                      containers ^>=0.6.7
    default-language: Haskell2010

executable regex
    import:           warnings
    main-is:          Main.hs
    other-modules:    RegularExpressions
    hs-source-dirs:   app/regex
    build-depends:    lab01,
                      base >=4.18.3.0 && <4.19,
                      containers ^>=0.6.7
    default-language: Haskell2010
